--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,26 @@
     tools:context=".MainActivity"
     >
     <FrameLayout
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/container"
         app:layout_constraintTop_toTopOf="parent">
+        <Button
+            android:id="@+id/button"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:text=" 0 "
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="15sp"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/white"
+            android:onClick="onButtonClick"/>
         <TextView
             android:id="@+id/text_view"
             android:layout_width="wrap_content"
@@ -176,12 +192,14 @@
             <com.google.android.material.button.MaterialButton
                 style="@style/Orange.Button"
                 android:text="="
-                android:onClick="onOperatorClick"
-                android:id="@+id/equal"
-                />
+                android:onClick="onEqualClick"
+                android:id="@+id/equal" />
 
         </LinearLayout>
+
+
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
