--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -44,14 +44,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/heart"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="18dp"
                 android:id="@+id/heart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="310dp"
+                android:layout_marginBottom="150dp"
+                android:background="@drawable/heart"
                 android:onClick="onHeartClick"/>
 
             <TextView
@@ -78,6 +78,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginBottom="18dp"
                 android:id="@+id/free"
+                android:onClick="onNextClick"
               />
             <TextView
                 android:layout_width="match_parent"
@@ -128,6 +129,7 @@
         android:layout_marginEnd="9dp"
         android:text="Next"
         android:textSize="16sp"
+        android:onClick="onNextClick"
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="@id/card_view"
         app:layout_constraintStart_toStartOf="@id/card_view"
